test/errors/stmt_async_with_invalid_as_target.py
async def main():
    async with CM() as ~value:
        pass
